--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="chrome-ext-mapycz : Simple chrome context menu extension to find stuff on mapy.cz">
+    <title>chrome-ext-mapycz by w-vi</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>chrome-ext-mapycz</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/w-vi/chrome-ext-mapycz">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/w-vi/chrome-ext-mapycz/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/w-vi/chrome-ext-mapycz/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/w-vi/chrome-ext-mapycz">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">chrome-ext-mapycz</h1>
-          <h2 id="project_tagline">Simple chrome context menu extension to find stuff on mapy.cz</h2>
+      <section>
+        <div id="title">
+          <h1>chrome-ext-mapycz</h1>
+          <p>Simple chrome context menu extension to find stuff on mapy.cz</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/w-vi">w-vi</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/w-vi/chrome-ext-mapycz/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/w-vi/chrome-ext-mapycz/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h1>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h1>
 
@@ -52,18 +59,11 @@ text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab 
 <h1>
 <a id="screenshot" class="anchor" href="#screenshot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot</h1>
 
-<p><img src="/screenshot.png?raw=true" alt="Screenshot" title="Screenshot"></p>
+<p><img src="images/screenshot.png" alt="Screenshot" title="Screenshot"></p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">chrome-ext-mapycz maintained by <a href="https://github.com/w-vi">w-vi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -74,7 +74,6 @@ text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab 
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
