--- a/cs.html
+++ b/cs.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="cs">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -34,30 +34,40 @@
           <h1>chrome-ext-mapycz</h1>
           <p>Simple chrome context menu extension to find stuff on mapy.cz</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/w-vi">w-vi</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash;
-          Theme
-            by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-          <span class="credits left">Česky<a href="http://w-vi.github.io/chrome-ext-mapycz/cs.html">w-vi</a></span>
+          <span class="credits left">Projekt je spravován <a href="https://github.com/w-vi">w-vi</a></span>
+          <span class="credits right">Hostováno na GitHub Pages
+          &mdash; Design stránky
+            od<a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits left">English <a href="http://w-vi.github.io/chrome-ext-mapycz/">w-vi</a></span>
         </div>
 
         <h1>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h1>
+<a id="about" class="anchor" href="#about"
+   aria-hidden="true"><span class="octicon octicon-link"></span></a>O rozšíření</h1>
 
-<p>This is a very simple chrome context menu extension to find selected
-text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab with the <a href="http://mapy.cz/">http://mapy.cz/</a> search result.</p>
+<p>Chorme-ext-mapycz je jednoduché rozšíření kontextového menu
+  prohlížeče Chrome, které umožňuje hledaní vybraného textu na
+  serveru  <a href="http://mapy.cz/">http://mapy.cz/</a>. Jednoduše
+  otevtře nový "tab" přímo s výsledky hledání.</p>
 
-<p>It is for those who are using mapy.cz and find it annoying to copy&amp;paste the address to the mapy.cz search.</p>
-
-<h1>
-<a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h1>
-
-<p>Get it directly from <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome webstore</a> or grab it from source.</p>
+<p>Toto rozšíření je pro všechny koho nebaví dělat copy&amp;paste aby našel adresu na <a href="http://mapy.cz/">http://mapy.cz/</a></p>
 
 <h1>
-<a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h1>
+<a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instalace</h1>
 
-<p>Please use either the <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb/support">chrome webstore support</a> or <a href="https://github.com/w-vi/chrome-ext-mapycz/issues">github issues</a></p>
+<p>Nejlepé si rozšíření nainstalujte přímo
+  z <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome
+  webstoru</a> nebo případně případně ze zdrojových textů, viz odkaz
+  výše.</p>
+
+<h1>
+<a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Podpora</h1>
+
+<p>Prosím pro hlašení chyb, návrhů nebo čehokoli dalšího
+  použijte <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb/support">chrome
+    webstore podporu</a>
+  nebo přímo <a href="https://github.com/w-vi/chrome-ext-mapycz/issues">github
+    issues</a>.</p>
 
 <h1>
 <a id="screenshot" class="anchor" href="#screenshot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot</h1>
