--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           <span class="credits right">Hosted on GitHub Pages &mdash;
           Theme
             by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-          <span class="credits left">Česky<a href="http://w-vi.github.io/chrome-ext-mapycz/cs.html">w-vi</a></span>
+          <br/>>
+          <span class="credits left"><a href="http://w-vi.github.io/chrome-ext-mapycz/cs.html">Česky</a></span>
         </div>
 
         <h1>
