--- a/cs.html
+++ b/cs.html
@@ -32,13 +32,15 @@
       <section>
         <div id="title">
           <h1>chrome-ext-mapycz</h1>
-          <p>Simple chrome context menu extension to find stuff on mapy.cz</p>
+          <p>Jednoduché rozšíření pro chrome na hledání adres na
+          serveru mapy.cz</p>
           <hr>
           <span class="credits left">Projekt je spravován <a href="https://github.com/w-vi">w-vi</a></span>
           <span class="credits right">Hostováno na GitHub Pages
           &mdash; Design stránky
             od<a href="https://twitter.com/michigangraham">mattgraham</a></span>
-          <span class="credits left">English <a href="http://w-vi.github.io/chrome-ext-mapycz/">w-vi</a></span>
+          <br/>
+          <span class="credits left"><a href="http://w-vi.github.io/chrome-ext-mapycz/">English</a></span>
         </div>
 
         <h1>
