--- a/cs.html
+++ b/cs.html
@@ -59,7 +59,7 @@
 
 <p>Nejlepé si rozšíření nainstalujte přímo
   z <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome
-  webstoru</a> nebo případně případně ze zdrojových textů, viz odkaz
+  webstoru</a> nebo případně ze zdrojových textů, viz odkaz
   výše.</p>
 
 <h1>
