Change wording as it works in FF too

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>chrome-ext-mapycz by w-vi</title>
+    <title>web-ext-mapycz by w-vi</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,9 +20,9 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/w-vi/chrome-ext-mapycz">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/w-vi/chrome-ext-mapycz/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/w-vi/chrome-ext-mapycz/tarball/master">TAR</a></li>
+          <li class="fork"><a href="https://github.com/w-vi/web-ext-mapycz">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/w-vi/web-ext-mapycz/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/w-vi/web-ext-mapycz/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -31,21 +31,21 @@
 
       <section>
         <div id="title">
-          <h1>chrome-ext-mapycz</h1>
-          <p>Simple chrome context menu extension to find stuff on mapy.cz</p>
+          <h1>web-ext-mapycz</h1>
+          <p>Simple webextension context menu extension to find stuff on mapy.cz</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/w-vi">w-vi</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash;
           Theme
             by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
           <br/>
-          <span class="credits left"><a href="http://w-vi.github.io/chrome-ext-mapycz/cs.html">Česky</a></span>
+          <span class="credits left"><a href="http://w-vi.github.io/web-ext-mapycz/cs.html">Česky</a></span>
         </div>
 
         <h1>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h1>
 
-<p>This is a very simple chrome context menu extension to find selected
+<p>This is a very simple WebExtension context menu extension to find selected
 text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab with the <a href="http://mapy.cz/">http://mapy.cz/</a> search result.</p>
 
 <p>It is for those who are using mapy.cz and find it annoying to copy&amp;paste the address to the mapy.cz search.</p>
@@ -58,7 +58,7 @@ text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab 
 <h1>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h1>
 
-<p>Please use either the <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb/support">chrome webstore support</a> or <a href="https://github.com/w-vi/chrome-ext-mapycz/issues">github issues</a></p>
+<p>Please use either the <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb/support">chrome webstore support</a> or <a href="https://github.com/w-vi/web-ext-mapycz/issues">github issues</a></p>
 
 <h1>
 <a id="screenshot" class="anchor" href="#screenshot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot</h1>
