--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@ text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab 
 <h1>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h1>
 
-<p>Get it directly from <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome webstore</a> or grab it from source.</p>
+<p>Chrome/Chromium: Get it directly from <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome webstore</a>.</p>
+
+<p>Firefox 57+: Get it directly from <a href="https://addons.mozilla.org/en-US/firefox/addon/find-on-mapy-cz/">Mozilla Addons</a>.</p>
+
+<p>Or grab it from source <a href="https://github.com/w-vi/web-ext-mapycz/">on Github</a>.</p>
 
 <h1>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h1>
