Update Czech page

--- a/cs.html
+++ b/cs.html
@@ -20,9 +20,9 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/w-vi/chrome-ext-mapycz">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/w-vi/chrome-ext-mapycz/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/w-vi/chrome-ext-mapycz/tarball/master">TAR</a></li>
+          <li class="fork"><a href="https://github.com/w-vi/web-ext-mapycz">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/w-vi/web-ext-mapycz/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/w-vi/web-ext-mapycz/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -31,8 +31,8 @@
 
       <section>
         <div id="title">
-          <h1>chrome-ext-mapycz</h1>
-          <p>Jednoduché rozšíření pro chrome na hledání adres na
+          <h1>web-ext-mapycz</h1>
+          <p>Jednoduché rozšíření pro chrome nebo firefox na hledání adres na
           serveru mapy.cz</p>
           <hr>
           <span class="credits left">Projekt je spravován <a href="https://github.com/w-vi">w-vi</a></span>
@@ -40,36 +40,35 @@
           &mdash; Design stránky
             od<a href="https://twitter.com/michigangraham">mattgraham</a></span>
           <br/>
-          <span class="credits left"><a href="http://w-vi.github.io/chrome-ext-mapycz/">English</a></span>
+          <span class="credits left"><a href="http://w-vi.github.io/web-ext-mapycz/">English</a></span>
         </div>
 
         <h1>
 <a id="about" class="anchor" href="#about"
    aria-hidden="true"><span class="octicon octicon-link"></span></a>O rozšíření</h1>
 
-<p>Chorme-ext-mapycz je jednoduché rozšíření kontextového menu
-  prohlížeče Chrome, které umožňuje hledaní vybraného textu na
-  serveru  <a href="http://mapy.cz/">http://mapy.cz/</a>. Jednoduše
-  otevtře nový "tab" přímo s výsledky hledání.</p>
+<p>Web-ext-mapycz je jednoduché rozšíření kontextového menu pro prohlížeče s
+  podporou Webextensions jako je Chrome nebo Firefox, které umožňuje hledaní
+  vybraného textu na serveru <a href="http://mapy.cz/">http://mapy.cz/</a>. Jednoduše otevtře nový "tab" přímo
+  s výsledky hledání.</p>
 
 <p>Toto rozšíření je pro všechny koho nebaví dělat copy&amp;paste aby našel adresu na <a href="http://mapy.cz/">http://mapy.cz/</a></p>
 
 <h1>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instalace</h1>
 
-<p>Nejlepé si rozšíření nainstalujte přímo
-  z <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome
-  webstoru</a> nebo případně ze zdrojových textů, viz odkaz
-  výše.</p>
+<p><i>Chrome</i>: Nejlepé si rozšíření nainstalujte přímo z <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome  webstoru</a></p>
+
+<p><i>Firefox 57+</i>: Rozšíření je pro Firefox na <a href="https://addons.mozilla.org/en-US/firefox/addon/find-on-mapy-cz/">Mozilla Addons</a>.</p>
+
+<p>Případně přímo ze <a href="https://github.com/w-vi/web-ext-mapycz/">zdrojových textů</a>.</p>
 
 <h1>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Podpora</h1>
 
-<p>Prosím pro hlašení chyb, návrhů nebo čehokoli dalšího
-  použijte <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb/support">chrome
-    webstore podporu</a>
-  nebo přímo <a href="https://github.com/w-vi/chrome-ext-mapycz/issues">github
-    issues</a>.</p>
+<p>Prosím pro hlašení chyb, návrhů nebo čehokoli dalšího použijte <a
+  href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb/support">chrome
+  webstore podporu</a> nebo přímo <a href="https://github.com/w-vi/web-ext-mapycz/issues">github issues</a>.</p>
 
 <h1>
 <a id="screenshot" class="anchor" href="#screenshot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot</h1>
