--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>web-ext-mapycz by w-vi</title>
+    <title>web-ext-mapycz</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>web-ext-mapycz</h1>
-          <p>Simple webextension context menu extension to find stuff on mapy.cz</p>
+          <p>Simple webextension context menu to find stuff on mapy.cz</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/w-vi">w-vi</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash;
