Update text to version 1.1.0

--- a/cs.html
+++ b/cs.html
@@ -47,17 +47,19 @@
 <a id="about" class="anchor" href="#about"
    aria-hidden="true"><span class="octicon octicon-link"></span></a>O rozšíření</h1>
 
-<p>Web-ext-mapycz je jednoduché rozšíření kontextového menu pro prohlížeče s
+<p>Web-ext-mapycz je jednoduché rozšíření na vyhledávání pro prohlížeče s
   podporou Webextensions jako je Chrome nebo Firefox, které umožňuje hledaní
-  vybraného textu na serveru <a href="http://mapy.cz/">http://mapy.cz/</a>. Jednoduše otevtře nový "tab" přímo
+  vybraného textu na serveru <a href="https://mapy.cz/">https://mapy.cz/</a>. Jednoduše otevtře nový "tab" přímo
   s výsledky hledání.</p>
 
-<p>Toto rozšíření je pro všechny koho nebaví dělat copy&amp;paste aby našel adresu na <a href="http://mapy.cz/">http://mapy.cz/</a></p>
+<p>Toto rozšíření je pro všechny koho nebaví dělat copy&amp;paste aby našel adresu na <a href="https://mapy.cz/">https://mapy.cz/</a></p>
+
+<p>Od verze 1.1.0 také podporuje integraci s navigačním/vyhledávacím polem. Klíčové slovo je <code>@mapy</code></p>
 
 <h1>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instalace</h1>
 
-<p><i>Chrome</i>: Nejlepé si rozšíření nainstalujte přímo z <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome  webstoru</a></p>
+<p><i>Chrome/Chromium</i>: Nejlepé si rozšíření nainstalujte přímo z <a href="https://chrome.google.com/webstore/detail/find-on-mapycz/gmogjpphjifpompcibhiafmlkhdmbbkb">chrome  webstoru</a></p>
 
 <p><i>Firefox 57+</i>: Rozšíření je pro Firefox na <a href="https://addons.mozilla.org/en-US/firefox/addon/find-on-mapy-cz/">Mozilla Addons</a>.</p>
 
@@ -75,19 +77,6 @@
 
 <p><img src="images/screenshot.png" alt="Screenshot" title="Screenshot"></p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-59338384-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
   </body>
 </html>
