--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
         <h1>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h1>
 
-<p>This is a very simple WebExtension context menu extension to find selected
-text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab with the <a href="http://mapy.cz/">http://mapy.cz/</a> search result.</p>
+<p>This is a very simple WebExtension extension to find selected
+text on <a href="https://mapy.cz/">https://mapy.cz/</a> . It just opens new a tab with the <a href="https://mapy.cz/">https://mapy.cz/</a> search result.</p>
 
 <p>It is for those who are using mapy.cz and find it annoying to copy&amp;paste the address to the mapy.cz search.</p>
+
+<p>From version 1.1.0 it also supports navigation/search bar intergration using the <code>@mapy</code></p>
 
 <h1>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h1>
@@ -71,17 +73,5 @@ text on <a href="http://mapy.cz/">http://mapy.cz/</a> . It just opens new a tab 
       </section>
 
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-59338384-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
   </body>
 </html>
